# Foxkit

./: LICENSE  README.md
.github/workflows/: rust.yml
foxkit-core/: Cargo.toml  README.md
foxkit-core/crates/accessibility/: Cargo.toml
foxkit-core/crates/ai-chat/: Cargo.toml
foxkit-core/crates/ai-chat/src/: actions.rs  commands.rs  lib.rs
foxkit-core/crates/ai-core/: Cargo.toml
foxkit-core/crates/ai-core/src/: agent.rs  completion.rs  context.rs  lib.rs  mcp.rs  providers.rs  tools.rs
foxkit-core/crates/ai-inline-completion/: Cargo.toml
foxkit-core/crates/ai-inline-completion/src/: lib.rs  providers.rs
foxkit-core/crates/auto-save/: Cargo.toml
foxkit-core/crates/bracket-matching/: Cargo.toml
foxkit-core/crates/bracket-matching/src/: lib.rs
foxkit-core/crates/breadcrumbs/: Cargo.toml
foxkit-core/crates/breadcrumbs/src/: lib.rs
foxkit-core/crates/buffer/: Cargo.toml
foxkit-core/crates/call-hierarchy/: Cargo.toml
foxkit-core/crates/code-actions/: Cargo.toml
foxkit-core/crates/code-actions/src/: lib.rs
foxkit-core/crates/code-lens/: Cargo.toml
foxkit-core/crates/code-lens/src/: commands.rs  lib.rs  provider.rs  resolver.rs
foxkit-core/crates/collab/: Cargo.toml
foxkit-core/crates/collab/src/: client.rs  lib.rs  presence.rs  protocol.rs  room.rs  session.rs  sync.rs
foxkit-core/crates/color-picker/: Cargo.toml
foxkit-core/crates/commands/: Cargo.toml
foxkit-core/crates/commands/src/: handler.rs  lib.rs  palette.rs
foxkit-core/crates/comment-actions/: Cargo.toml
foxkit-core/crates/comment-actions/src/: lib.rs
foxkit-core/crates/comment-controller/: Cargo.toml
foxkit-core/crates/comment-controller/src/: lib.rs
foxkit-core/crates/completion/: Cargo.toml
foxkit-core/crates/completion/src/: item.rs  lib.rs  provider.rs  resolve.rs  snippet.rs  trigger.rs
foxkit-core/crates/container-integration/: Cargo.toml
foxkit-core/crates/container-integration/src/: lib.rs
foxkit-core/crates/crdt/: Cargo.toml
foxkit-core/crates/crdt/src/: id.rs  lib.rs  operation.rs  state.rs  text.rs
foxkit-core/crates/dap/: Cargo.toml
foxkit-core/crates/dap/src/: adapter.rs  client.rs  lib.rs  messages.rs  protocol.rs  session.rs  variables.rs
foxkit-core/crates/debug-console/: Cargo.toml
foxkit-core/crates/debug-console/src/: lib.rs
foxkit-core/crates/debugger-ui/: Cargo.toml
foxkit-core/crates/debugger-ui/src/: breakpoints.rs  callstack.rs  console.rs  lib.rs  toolbar.rs  variables.rs  views.rs  watch.rs
foxkit-core/crates/dependency-graph/: Cargo.toml
foxkit-core/crates/dependency-graph/src/: build_order.rs  lib.rs
foxkit-core/crates/diagnostics/: Cargo.toml
foxkit-core/crates/diff/: Cargo.toml
foxkit-core/crates/diff-editor/: Cargo.toml
foxkit-core/crates/diff-editor/src/: lib.rs
foxkit-core/crates/document-formatting/: Cargo.toml
foxkit-core/crates/document-formatting/src/: lib.rs
foxkit-core/crates/document-highlight/: Cargo.toml
foxkit-core/crates/document-highlight/src/: lib.rs
foxkit-core/crates/document-links/: Cargo.toml
foxkit-core/crates/document-links/src/: lib.rs
foxkit-core/crates/document-symbol/: Cargo.toml
foxkit-core/crates/document-symbol/src/: lib.rs
foxkit-core/crates/editor/: Cargo.toml
foxkit-core/crates/editor-decorations/: Cargo.toml
foxkit-core/crates/editor-scroll/: Cargo.toml
foxkit-core/crates/editor-tabs/: Cargo.toml
foxkit-core/crates/editor-tabs/src/: lib.rs
foxkit-core/crates/editor/src/: commands.rs  controller.rs  cursor.rs  input.rs  lib.rs  minimap.rs  render.rs  scroll.rs  selection.rs  soft_wrap.rs  text_element.rs  view.rs  word.rs
foxkit-core/crates/explorer/: Cargo.toml
foxkit-core/crates/explorer/src/: lib.rs
foxkit-core/crates/extension-host/: Cargo.toml
foxkit-core/crates/extension-host/src/: api.rs  lib.rs  loader.rs  manifest.rs  permission.rs  runtime.rs  sandbox.rs
foxkit-core/crates/file-decorations/: Cargo.toml
foxkit-core/crates/file-watcher/: Cargo.toml
foxkit-core/crates/file-watcher/src/: lib.rs
foxkit-core/crates/find-references/: Cargo.toml
foxkit-core/crates/find-references/src/: lib.rs
foxkit-core/crates/folding/: Cargo.toml
foxkit-core/crates/folding-range/: Cargo.toml
foxkit-core/crates/folding-range/src/: lib.rs
foxkit-core/crates/font-ligatures/: Cargo.toml
foxkit-core/crates/formatting/: Cargo.toml
foxkit-core/crates/foxkit/: Cargo.toml
foxkit-core/crates/foxkit-core/: Cargo.toml
foxkit-core/crates/foxkit-gpui/: Cargo.toml
foxkit-core/crates/foxkit-ui/: Cargo.toml
foxkit-core/crates/fs/: Cargo.toml
foxkit-core/crates/git/: Cargo.toml
foxkit-core/crates/goto-definition/: Cargo.toml
foxkit-core/crates/gpu/: Cargo.toml
foxkit-core/crates/gutter/: Cargo.toml
foxkit-core/crates/history/: Cargo.toml
foxkit-core/crates/hover/: Cargo.toml
foxkit-core/crates/indent-guides/: Cargo.toml
foxkit-core/crates/inlay-hints/: Cargo.toml
foxkit-core/crates/interactive-playground/: Cargo.toml
foxkit-core/crates/keybindings/: Cargo.toml
foxkit-core/crates/keybindings-editor/: Cargo.toml
foxkit-core/crates/language/: Cargo.toml
foxkit-core/crates/linked-editing/: Cargo.toml
foxkit-core/crates/localization/: Cargo.toml
foxkit-core/crates/lsp/: Cargo.toml
foxkit-core/crates/markers/: Cargo.toml
foxkit-core/crates/merge-editor/: Cargo.toml
foxkit-core/crates/minimap/: Cargo.toml
foxkit-core/crates/minimap-decorations/: Cargo.toml
foxkit-core/crates/monorepo/: Cargo.toml
foxkit-core/crates/multi-cursor/: Cargo.toml
foxkit-core/crates/notebook/: Cargo.toml
foxkit-core/crates/notifications/: Cargo.toml
foxkit-core/crates/on-type-formatting/: Cargo.toml
foxkit-core/crates/outline/: Cargo.toml
foxkit-core/crates/outline-panel/: Cargo.toml
foxkit-core/crates/output-channel/: Cargo.toml
foxkit-core/crates/package-resolver/: Cargo.toml
foxkit-core/crates/panel/: Cargo.toml
foxkit-core/crates/platform-native/: Cargo.toml
foxkit-core/crates/problems/: Cargo.toml
foxkit-core/crates/project/: Cargo.toml
foxkit-core/crates/quickopen/: Cargo.toml
(+308 files in other folders)
