[package]
name = "foxkit-ai-inline-completion"
version = "0.1.0"
edition = "2024"
description = "Copilot-style inline AI completions for Foxkit"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
