[package]
name = "breadcrumbs"
version.workspace = true
edition.workspace = true
description = "Foxkit Breadcrumbs - navigation breadcrumb trail"

[dependencies]
lsp = { path = "../lsp" }
treesitter = { path = "../treesitter" }

tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true

anyhow = "1.0"
tracing = "0.1"
