[package]
name = "collab"
version.workspace = true
edition.workspace = true
description = "Foxkit collaboration - real-time multi-user editing"

[dependencies]
foxkit-core = { path = "../foxkit-core" }
crdt = { path = "../crdt" }

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }
tokio-tungstenite = "0.21"
