[package]
name = "comment-controller"
version.workspace = true
edition.workspace = true
description = "Foxkit Comment Controller - code commenting features"

[dependencies]
editor = { path = "../editor" }
treesitter = { path = "../treesitter" }

tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true

anyhow = "1.0"
tracing = "0.1"
