[package]
name = "completion"
version.workspace = true
edition.workspace = true
description = "Foxkit Completion - code completion and IntelliSense"

[dependencies]
foxkit-core = { path = "../foxkit-core" }

serde.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
