[package]
name = "dap"
version.workspace = true
edition.workspace = true
description = "Foxkit DAP - Debug Adapter Protocol client"

[dependencies]
foxkit-core = { path = "../foxkit-core" }

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
