[package]
name = "document-symbol"
version.workspace = true
edition.workspace = true
description = "Foxkit Document Symbol - file symbols and structure"

[dependencies]
lsp = { path = "../lsp" }
treesitter = { path = "../treesitter" }

tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true

anyhow = "1.0"
tracing = "0.1"
