[package]
name = "editor-tabs"
version.workspace = true
edition.workspace = true
description = "Foxkit Editor Tabs - tab management and tab bar"

[dependencies]
buffer = { path = "../buffer" }

parking_lot.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync"] }

tracing = "0.1"
