[package]
name = "extension-host"
version.workspace = true
edition.workspace = true
description = "Foxkit extension host - WASM-based extension runtime"

[dependencies]
foxkit-core = { path = "../foxkit-core" }

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4"] }
semver = "1.0"
wasmtime = "21"
toml = "0.8"
