[package]
name = "find-references"
version.workspace = true
edition.workspace = true
description = "Foxkit Find References - symbol reference finder"

[dependencies]
lsp = { path = "../lsp" }
goto-definition = { path = "../goto-definition" }

tokio.workspace = true
parking_lot.workspace = true
serde.workspace = true

anyhow = "1.0"
tracing = "0.1"
